First decent version introduce variable refactoring